WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
286340
[WebGPU] Error message from metal compilation is not reported via popErrorScope in Debug
https://bugs.webkit.org/show_bug.cgi?id=286340
Summary
[WebGPU] Error message from metal compilation is not reported via popErrorSco...
Mike Wyrzykowski
Reported
2025-01-21 22:25:09 PST
[WebGPU] Failed metal shader compilation is not reported via web inspector
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-01-21 22:25:25 PST
<
rdar://problem/143372099
>
Mike Wyrzykowski
Comment 2
2025-01-22 09:02:53 PST
Pull request:
https://github.com/WebKit/WebKit/pull/39386
EWS
Comment 3
2025-01-22 21:17:07 PST
Committed
289276@main
(c57f1a4ede62): <
https://commits.webkit.org/289276@main
> Reviewed commits have been landed. Closing PR #39386 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug