[WebGPU] Error message from metal compilation is not reported via popErrorScope in Debug https://bugs.webkit.org/show_bug.cgi?id=286340 rdar://143372099

Reviewed by Tadeu Zagallo.

We were only assigning the error in non-debug builds, leading
to popErrorScope not including the message in Debug builds.

* Source/WebGPU/WebGPU/ShaderModule.mm:
(WebGPU::ShaderModule::createLibrary):

Canonical link: https://commits.webkit.org/289276@main