Source/WebGPU/WebGPU/ShaderModule.mm
@@ -87,10 +87,9 @@ ALLOW_DEPRECATED_DECLARATIONS_END
     // FIXME(PERFORMANCE): Run the asynchronous version of this
     id<MTLLibrary> library = [device newLibraryWithSource:msl options:options error:error];
     if (error && *error) {
-        // FIXME: https://bugs.webkit.org/show_bug.cgi?id=250442
-#ifdef NDEBUG
         *error = [NSError errorWithDomain:@"WebGPU" code:1 userInfo:@{ NSLocalizedDescriptionKey: [NSString stringWithFormat:@"Failed to compile the shader source, generated metal:\n%@", (NSString*)msl] }];
-#else
+#ifndef NDEBUG
+        // FIXME: https://bugs.webkit.org/show_bug.cgi?id=250442
         WTFLogAlways("MSL compilation error: %@", [*error localizedDescription]);
 #endif
         return nil;
